--- a/0220_Practice.ipynb
+++ b/0220_Practice.ipynb
@@ -13,7 +13,7 @@
    "id": "d69251c3",
    "metadata": {},
    "source": [
-    "- 데이터 출처 : Data.gov\n",
+    "[데이터 출처](https://catalog.data.gov/dataset/job-patterns-for-minorities-and-women-in-private-industry-2009-eeo-1-naics-4-aggregate-rep)\n",
     "\n",
     "\n",
     "- 이 데이터는 'Energy' 카테고리에 있었다. 따라서 변수들에 따라서 pctofst(수평 오프셋)의 변화가 어떤지 분석하는 것이 목적이라고 추정된다. 즉, 민간 사업에서 여성과 소수자가 있는 기업들의 전력시험기(전력분석계)의 pctofst(수평 오프셋)을 측정한 것으로 보인다. (정확한 목적은 잘 모르겠습니다...)\n",
